06-XXXXXX/代码/log/build_2025-08-21_22-42-53/camera_python_package/stderr.log
  File "/home/mepus/ros2_ws/install/camera_python_package/lib/python3.10/site-packages/camera_python_package/usb_camera.py", line 12
    class UsbCamera(Node)
                         ^
SyntaxError: expected ':'

